--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
             <div class="logo-sony"></div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold sticky-top">
             <div class="container-fluid">
 
                 <!-- Left menu -->
@@ -100,8 +100,21 @@
                     </div>
                 </div>
             </div>
-          </nav>
+        </nav>
     </header>
+
+    <main>
+        <div id="jumbotron" class="container-fluid d-flex flex-column justify-content-end p-5">
+                <div class="row">
+                    <div id="jumbo-title" class="col-12 col-xl-3 mb-4"></div>
+                </div>
+                <div class="row">
+                    <div id="jumbo-text" class="col-6 col-xl-3"><p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id laborum, eius tempora architecto error odit aliquid molestias placeat, culpa facilis! Cum laborum mollitia quos optio, vero qui consectetur quia?</p>
+                        <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Accedi</button>
+                    </div>
+                </div>                
+        </div>
+    </main>
 
 
     <!-- bootstrap js import -->
