--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MyPlaystation</title>
 </head>
-<body class="debug">
+<body class="">
     <header>
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
-            <div class="logo-sony"></div>
+            <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold sticky-top">
             <div class="container-fluid">
 
                 <!-- Left menu -->
                 <a class="navbar-brand" href="#">
-                    <img src="img/play_logo.svg" alt="play logo">
+                    <img src="img/play_logo.svg" alt="Logo PlayStation">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -106,11 +106,18 @@
     <main>
         <div id="jumbotron" class="container-fluid d-flex flex-column justify-content-end p-5">
                 <div class="row">
-                    <div id="jumbo-title" class="col-12 col-xl-3 mb-4"></div>
+                    <div id="jumbo-logo" class="col-6 col-xl-2 mb-5">
+                        <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
+                    </div>
                 </div>
                 <div class="row">
-                    <div id="jumbo-text" class="col-6 col-xl-3"><p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto id laborum, eius tempora architecto error odit aliquid molestias placeat, culpa facilis! Cum laborum mollitia quos optio, vero qui consectetur quia?</p>
-                        <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Accedi</button>
+                    <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
+                        <h1 class="em3">Rompi il cerchio</h1>
+                    </div>
+                    <div class="row">
+                        <div id="jumbo-text" class="col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                            <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
+                        </div>
                     </div>
                 </div>                
         </div>
