--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MyPlaystation</title>
 </head>
-<body class="">
+<body class="debug">
     <header>
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
             <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
@@ -119,7 +119,30 @@
                             <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
                         </div>
                     </div>
-                </div>                
+                </div>
+        </div>
+
+        <div id="game-slider" class="container-fluid mt-3">
+            <div class="row justify-content-around">
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+
+                </div>
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+
+                </div>
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+
+                </div>
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+
+                </div>
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+
+                </div>
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
+                    
+                </div>
+            </div>
         </div>
     </main>
 
