--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MyPlaystation</title>
 </head>
-<body class="debug">
+<body class="">
     <header>
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
             <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
@@ -123,27 +123,28 @@
         </div>
 
         <div id="game-slider" class="container-fluid mt-3">
-            <div class="row justify-content-around">
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-
+            <div class="row justify-content-around ps-4 pe-4">
+                <div id="game-card-active" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-2">
-                    
+                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
             </div>
         </div>
+
     </main>
 
 
