debug ps5 section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MyPlaystation</title>
 </head>
-<body class="">
+<body class="debug">
     <header>
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
             <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
@@ -143,6 +143,25 @@
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
             </div>
+        </div>
+
+        <div id="ps5-section" class="container-fluid mt-5">
+            <div class="row d-flex justify-content-center mb-5">
+                <div id="ps5" class="col-12 col-sm-10 col-lg-6">
+
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div id="ps5-info" class="col-12 col-sm-10 col-lg-5">
+
+                </div>
+                <div id="ps5-image" class="col-12 col-sm-10 col-lg-7">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
         </div>
 
     </main>
