--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MyPlaystation</title>
 </head>
-<body class="debug">
+<body class="">
     <header>
         <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
             <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
@@ -87,7 +87,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
                                 <a class="nav-link my__dropdown-toggle active me-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    My Playstation <i class="fas fa-chevron-down"></i></a>
+                                    My PlayStation <i class="fas fa-chevron-down"></i></a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">TEXT 1</a></li>
                                     <li><a class="dropdown-item" href="#">TEXT 2</a></li>
@@ -145,23 +145,45 @@
             </div>
         </div>
 
-        <div id="ps5-section" class="container-fluid mt-5">
+        <div id="ps5-section" class="container-fluid mt-5 p-3">
             <div class="row d-flex justify-content-center mb-5">
-                <div id="ps5" class="col-12 col-sm-10 col-lg-6">
-
+                <div id="ps5" class="col-12 col-sm-10 col-lg-6 text-center p-5">
+                    <h4 class="text-primary">PLAY HAS NO LIMITS</h4>
+                    <h1>Ecco la PlayStation 5</h1>
+                    <p class="gray-text">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div id="ps5-info" class="col-12 col-sm-10 col-lg-5">
-
+            <div class="row d-flex justify-content-center align-items-center">
+                <div id="ps5-info" class="col-12 col-sm-10 col-lg-5 p-5">
+                    <h1>Console PlayStation 5</h1>
+                    <p class="gray-text">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
                 </div>
                 <div id="ps5-image" class="col-12 col-sm-10 col-lg-7">
-
+                    <img class="w-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
                 </div>
             </div>
         </div>
-        <div class="row">
-
+        <div id="ps5-slider" class="row d-flex justify-content-center">
+            <div id="ps5-card-active" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <img class="w-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
+                <span class="d-none d-sm-block">Console PS5</span>
+            </div>
+            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <img class="w-100" src="img/joypad-thumb.png" alt="DualSense image">
+                <span class="d-none d-sm-block">Controller wireless DualSense™</span>
+            </div>
+            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <img class="w-100" src="img/headset-thumb.png" alt="HeadSet PS5 image">
+                <span class="d-none d-sm-block">Cuffie wireless con microfono PULSE 3™</span>
+            </div>
+            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <img class="w-100" src="img/remote-thumb.png" alt="Remote Control image">
+                <span class="d-none d-sm-block">Telecomando Media</span>
+            </div>
+            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <img class="w-100" src="img/camera-thumb.jpg" alt="Web Cam HD image">
+                <span class="d-none d-sm-block">Telecamera HD</span>
+            </div>
         </div>
 
     </main>
