--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
 
     <main>
         <div id="jumbotron" class="container-fluid d-flex flex-column justify-content-end p-5">
-                <div class="row">
-                    <div id="jumbo-logo" class="col-6 col-xl-2 mb-5">
-                        <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
-                    </div>
+            <div class="row">
+                <div id="jumbo-logo" class="col-6 col-xl-2 mb-5">
+                    <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
+                </div>
+            </div>
+            <div class="row">
+                <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
+                    <h1 class="em3">Rompi il cerchio</h1>
                 </div>
                 <div class="row">
-                    <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
-                        <h1 class="em3">Rompi il cerchio</h1>
-                    </div>
-                    <div class="row">
-                        <div id="jumbo-text" class="col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
-                            <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
-                        </div>
+                    <div id="jumbo-text" class="col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                        <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
                     </div>
                 </div>
+            </div>
         </div>
 
         <div id="game-slider" class="container-fluid mt-3">
@@ -159,31 +159,108 @@
                     <p class="gray-text">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
                 </div>
                 <div id="ps5-image" class="col-12 col-sm-10 col-lg-7">
-                    <img class="w-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
+                    <img class="mw-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
                 </div>
             </div>
         </div>
-        <div id="ps5-slider" class="row d-flex justify-content-center">
-            <div id="ps5-card-active" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
-                <img class="w-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
-                <span class="d-none d-sm-block">Console PS5</span>
+        <div class="container-fluid">
+
+            <div id="ps5-slider" class="row d-flex justify-content-lg-center">
+                <div id="ps5-card-active" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                    <img class="mw-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
+                    <span class="d-none d-sm-block">Console PS5</span>
+                </div>
+                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                    <img class="mw-100" src="img/joypad-thumb.png" alt="DualSense image">
+                    <span class="d-none d-sm-block">Controller wireless DualSense™</span>
+                </div>
+                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                    <img class="mw-100" src="img/headset-thumb.png" alt="HeadSet PS5 image">
+                    <span class="d-none d-sm-block">Cuffie wireless con microfono PULSE 3™</span>
+                </div>
+                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                    <img class="mw-100" src="img/remote-thumb.png" alt="Remote Control image">
+                    <span class="d-none d-sm-block">Telecomando Media</span>
+                </div>
+                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                    <img class="mw-100" src="img/camera-thumb.jpg" alt="Web Cam HD image">
+                    <span class="d-none d-sm-block">Telecamera HD</span>
+                </div>
             </div>
-            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
-                <img class="w-100" src="img/joypad-thumb.png" alt="DualSense image">
-                <span class="d-none d-sm-block">Controller wireless DualSense™</span>
+        </div>
+
+        <div id="jumbotron-2" class="container-fluid d-flex flex-column justify-content-end p-5">
+            <div class="row">
+                <div id="jumbo-logo" class="col-6 col-lg-3 mb-5">
+                    <img class="w-75" src="img/it-takes-two-logo.png" alt="It Takes Two Logo">
+                </div>
             </div>
-            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
-                <img class="w-100" src="img/headset-thumb.png" alt="HeadSet PS5 image">
-                <span class="d-none d-sm-block">Cuffie wireless con microfono PULSE 3™</span>
+            <div class="row">
+                <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
+                    <h1 class="em3">Un'avventura cooperativa selvaggio ti attende</h1>
+                </div>
+                <div class="row">
+                    <div id="jumbo-text" class="col-12 col-md-6 col-lg-3"><p class="text-white mb-4 em-p">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                        <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
+                    </div>
+                </div>
             </div>
-            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
-                <img class="w-100" src="img/remote-thumb.png" alt="Remote Control image">
-                <span class="d-none d-sm-block">Telecomando Media</span>
+        </div>
+
+        <div id="new-releases" class="container-fluid text-white p-5">
+            <h2>Nuove Uscite</h2>
+            <h3>Giochi incredibili per PS4 E PS5 disponibili ora</h3>
+            <div class="row mt-5">
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
+                    <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
+                </div>
+                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                    <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
+                    <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
+                </div>
             </div>
-            <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
-                <img class="w-100" src="img/camera-thumb.jpg" alt="Web Cam HD image">
-                <span class="d-none d-sm-block">Telecamera HD</span>
-            </div>
+
         </div>
 
     </main>
