--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 <div id="ps5-info" class="col-12 col-sm-10 col-lg-5 p-5">
                     <h1>Console PlayStation 5</h1>
                     <p class="gray-text">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                    <button type="button" class="btn btn-primary rounded-pill fs-5 pt-2 pb-2 mt-3">Maggiori informazioni</button>
                 </div>
                 <div id="ps5-image" class="col-12 col-sm-10 col-lg-7">
                     <img class="mw-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
@@ -189,7 +190,7 @@
             </div>
         </div>
 
-        <div id="jumbotron-2" class="container-fluid d-flex flex-column justify-content-end p-5">
+        <div id="jumbotron-2" class="container-fluid d-flex flex-column justify-content-end p-5 mt-5">
             <div class="row">
                 <div id="jumbo-logo" class="col-6 col-lg-3 mb-5">
                     <img class="w-75" src="img/it-takes-two-logo.png" alt="It Takes Two Logo">
@@ -260,7 +261,35 @@
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
             </div>
+        </div>
 
+        <div id="ps4-section" class="container-fluid mt-5 mb-3 p-3">
+            <div class="row d-flex justify-content-center">
+                <div id="ps4" class="col-12 col-sm-10 col-lg-6 text-center p-5">
+                    <h1>Esplora PlayStation 4</h1>
+                    <p class="gray-text fs-4">Giochi incredibili e intrattenimento senza fine. <br>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-12 col-md-4 col-lg-4 p-4 mb-3">
+                    <img class="w-100" src="img/ps4-slim-homepage-image-block.jpg" alt="Ps4 Slim Image">
+                    <h1>PlayStation 4</h1>
+                    <p class="gray-text fs-4">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                    <button type="button" class="btn btn-primary rounded-pill fs-5 pt-2 pb-2 mt-2">Scopri di più</button>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4 p-4 mb-3">
+                    <img class="w-100" src="img/double11-202010-tw-psvr.jpg" alt="PlayStation VR Image">
+                    <h1>PlayStation VR</h1>
+                    <p class="gray-text fs-4">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                    <button type="button" class="btn btn-primary rounded-pill fs-5 pt-2 pb-2 mt-2">Scopri di più</button>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4 p-4 mb-3">
+                    <img class="w-100" src="img/dualshock-4-listing-thumb.jpg" alt="DualShock 4 Image">
+                    <h1>Accessori</h1>
+                    <p class="gray-text fs-4">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                    <button type="button" class="btn btn-primary rounded-pill fs-5 pt-2 pb-2 mt-2">Scopri di più</button>
+                </div>
+            </div>
         </div>
 
     </main>
