--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
         <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold sticky-top">
+    <nav id="top-menu" class="navbar navbar-expand-lg navbar-light bg-light fw-bold sticky-top">
         <div class="container-fluid">
 
             <!-- Left menu -->
@@ -335,6 +335,24 @@
                     <img class="h-100" src="img/ps-now-april-featured-image-block.png" alt="Ps Now Image">
                 </div>
             </div>            
+        </div>
+
+        <div id="social" class="container text-center mt-5">
+                <h2>Seguici sui social media</h2>
+            <div class="row d-flex justify-content-center mt-3 p-5">
+                <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
+                    <img class="w-100" src="img/twitter.jpg" alt="Twitter banner image">
+                </div>
+                <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
+                    <img class="w-100" src="img/facebook.jpg" alt="Facebook banner image">
+                </div>
+                <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
+                    <img class="w-100" src="img/instagram.jpg" alt="instagram banner image">
+                </div>
+                <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
+                    <img class="w-100" src="img/youtube.png" alt="YouTube banner image">
+                </div>
+            </div>
         </div>
 
     </main>
