Footer completo e FINE ESERCIZIO

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </div>            
         </div>
 
-        <div id="social" class="container text-center mt-5">
+        <div id="social" class="container text-center mt-5 pt-5 pb-5 mb-5">
                 <h2>Seguici sui social media</h2>
             <div class="row d-flex justify-content-center mt-3 p-5">
                 <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
@@ -347,15 +347,61 @@
                     <img class="w-100" src="img/facebook.jpg" alt="Facebook banner image">
                 </div>
                 <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
-                    <img class="w-100" src="img/instagram.jpg" alt="instagram banner image">
+                    <img class="w-100" src="img/instagram.jpg" alt="Instagram banner image">
                 </div>
                 <div class="col-6 col-sm-2 col-md-2 col-xl-2 p-2">
                     <img class="w-100" src="img/youtube.png" alt="YouTube banner image">
                 </div>
             </div>
         </div>
-
     </main>
+
+    <footer>
+        <div id="footer-wrap" class="container-fluid p-5">
+            <div id="footer-top" class="row">
+                <div id="language" class="col-12 col-lg-6 mt-5">
+                    <img id="ps-logo" class="mb-5" src="img/ps-footer.svg" alt="PlayStation logo">
+                    <p id="language-text" class="text-white fs-5"><span class="fs-3 me-3"><i class="fas fa-globe"></i></span> Country/Region: Italy</p>
+                </div>
+                <div id="footer-nav" class="col-12 col-lg-6 mt-5">
+                    <div class="row text-white fs-5">
+                        <div class="col-12 col-md-4 mb-5">
+                            <ul class="list-unstyled">
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4 mb-5">
+                            <ul class="list-unstyled">
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>   
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4 mb-5">
+                            <ul class="list-unstyled">
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>                             
+                                <li class="mb-3"><a class="text-decoration-none text-white" href="#">Link footer n</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="footer-bottom" class="row">
+                <div id="footer-info" class="col-lg-6">
+                    <img id="sie-logo" src="img/sie-logo.svg" alt="Sony Interactive Entertainment Logo">
+                    <p class="text-white fs-4 mt-3">Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a class="text-white" href="#">Maggiori info</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- bootstrap js import -->
