--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
     <main>
         <div id="jumbotron" class="container-fluid d-flex flex-column justify-content-end p-5">
             <div class="row">
-                <div id="jumbo-logo" class="col-6 col-xl-2 mb-5">
+                <div class="jumbo-logo col-6 col-xl-2 mb-5">
                     <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
                 </div>
             </div>
             <div class="row">
-                <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
+                <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
                     <h1 class="em3">Rompi il cerchio</h1>
                 </div>
                 <div class="row">
-                    <div id="jumbo-text" class="col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                    <div class="jumbo text col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
                         <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
                     </div>
                 </div>
@@ -122,22 +122,22 @@
 
         <div id="game-slider" class="container-fluid mt-3">
             <div class="row justify-content-around ps-4 pe-4">
-                <div id="game-card-active" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card-active col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
                 </div>
-                <div id="game-card" class=" col-6 col-md-4 col-lg-2 p-4">
+                <div class="game-card col-6 col-md-4 col-lg-2 p-4">
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratcet and Clank Image">
                 </div>
             </div>
@@ -145,7 +145,7 @@
 
         <div id="ps5-section" class="container-fluid mt-5 p-3">
             <div class="row d-flex justify-content-center mb-5">
-                <div id="ps5" class="col-12 col-sm-10 col-lg-6 text-center p-5">
+                <div class="ps5 col-12 col-sm-10 col-lg-6 text-center p-5">
                     <h4 class="text-primary">PLAY HAS NO LIMITS</h4>
                     <h1>Ecco la PlayStation 5</h1>
                     <p class="gray-text">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
@@ -165,23 +165,23 @@
         <div class="container-fluid">
 
             <div id="ps5-slider" class="row d-flex justify-content-lg-center">
-                <div id="ps5-card-active" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <div class="ps5-card-active col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
                     <img class="mw-100" src="img/playstation-5-thumb.png" alt="PlayStation 5 image">
                     <span class="d-none d-sm-block">Console PS5</span>
                 </div>
-                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <div class="ps5-card col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
                     <img class="mw-100" src="img/joypad-thumb.png" alt="DualSense image">
                     <span class="d-none d-sm-block">Controller wireless DualSense™</span>
                 </div>
-                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <div class="ps5-card col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
                     <img class="mw-100" src="img/headset-thumb.png" alt="HeadSet PS5 image">
                     <span class="d-none d-sm-block">Cuffie wireless con microfono PULSE 3™</span>
                 </div>
-                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <div class="ps5-card col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
                     <img class="mw-100" src="img/remote-thumb.png" alt="Remote Control image">
                     <span class="d-none d-sm-block">Telecomando Media</span>
                 </div>
-                <div id="ps5-card" class="col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
+                <div class="ps5-card col-4 col-md-4 col-lg-2 d-flex flex-column align-items-center p-5">
                     <img class="mw-100" src="img/camera-thumb.jpg" alt="Web Cam HD image">
                     <span class="d-none d-sm-block">Telecamera HD</span>
                 </div>
@@ -190,16 +190,16 @@
 
         <div id="jumbotron-2" class="container-fluid d-flex flex-column justify-content-end p-5 mt-5">
             <div class="row">
-                <div id="jumbo-logo" class="col-6 col-lg-3 mb-5">
+                <div class="jumbo-logo col-6 col-lg-3 mb-5">
                     <img class="w-75" src="img/it-takes-two-logo.png" alt="It Takes Two Logo">
                 </div>
             </div>
             <div class="row">
-                <div id="jumbo-title" class="col col-lg-5 mb-3 text-white fw-bold">
+                <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
                     <h1 class="em3">Un'avventura cooperativa selvaggio ti attende</h1>
                 </div>
                 <div class="row">
-                    <div id="jumbo-text" class="col-12 col-md-6 col-lg-3"><p class="text-white mb-4 em-p">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                    <div class="jumbo-text col-12 col-md-6 col-lg-3"><p class="text-white mb-4 em-p">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
                         <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
                     </div>
                 </div>
@@ -210,51 +210,51 @@
             <h2>Nuove Uscite</h2>
             <h3>Giochi incredibili per PS4 E PS5 disponibili ora</h3>
             <div class="row mt-5">
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Skater Image">
                     <p class="fs-4">Tony Hawk's™ Pro Skater™ 1+2</p>
                 </div>
-                <div id="new-game-card" class="col-6 col-md-4 col-lg-2 p-4">
+                <div class="new-game-card col-6 col-md-4 col-lg-2 p-4">
                     <img class="w-100 mb-3" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4 Image">
                     <p class="fs-4">Crash Bandicoot 4: It's About Time</p>
                 </div>
@@ -263,7 +263,7 @@
 
         <div id="ps4-section" class="container-fluid mt-5 mb-3 p-3">
             <div class="row d-flex justify-content-center">
-                <div id="ps4" class="col-12 col-sm-10 col-lg-6 text-center p-5">
+                <div  class="col-12 col-sm-10 col-lg-6 text-center p-5">
                     <h1>Esplora PlayStation 4</h1>
                     <p class="gray-text fs-4">Giochi incredibili e intrattenimento senza fine. <br>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
                 </div>
@@ -297,7 +297,7 @@
                     <p class="text-white mb-5 fs-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                     <button type="button" class="btn rounded-pill  btn-light text-primary fs-4 me-4 mb-3 mb-lg-0">Esplora PlayStation Plus</button>
                 </div>
-                <div id="jumbo-plus-img" class="d-none d-md-block col-md-6 col-lg-6">
+                <div class="jumbo-plus-img d-none d-md-block col-md-6 col-lg-6">
                     <img class="h-100 " src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="Ps Plus April Image">
                 </div>
             </div>            
@@ -326,12 +326,12 @@
 
         <div id="jumbotron-4" class="container-fluid d-flex flex-column justify-content-center mt-5 mb-5">
             <div class="row align-items-center">
-                <div id="jumbo-text" class="col-12 col-md-6 col-lg-6 p-5">
+                <div class="jumbo-text col-12 col-md-6 col-lg-6 p-5">
                     <img class="w-50 mb-5" src="img/ps-now-logo-two-column.png" alt="Ps Now Logo">
                     <p class="text-white mb-5 fs-4">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                     <button type="button" class="btn rounded-pill  btn-light fs-4 me-4 mb-3 mb-lg-0">Esplora PlayStation Now</button>
                 </div>
-                <div id="jumbo-plus-img" class="d-none d-md-block col-md-6 col-lg-6">
+                <div class="jumbo-plus-img d-none d-md-block col-md-6 col-lg-6">
                     <img class="h-100" src="img/ps-now-april-featured-image-block.png" alt="Ps Now Image">
                 </div>
             </div>            
