Piccola correzione BONUS navbar

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -13,7 +13,7 @@
     <div id="header-top" class="container-fluid d-flex justify-content-end align-items-center">
         <div class="logo-sony"><img src="img/sony_logo.svg" alt="Logo Sony"></div>
     </div>
-    <nav id="top-menu" class="navbar navbar-expand-lg navbar-light bg-light fw-bold sticky-top">
+    <nav id="top-menu" class="navbar navbar-expand-lg navbar-light bg-white fw-bold sticky-top">
         <div class="container-fluid">
 
             <!-- Left menu -->
@@ -28,7 +28,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Giochi <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -62,7 +62,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Hardware <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -96,7 +96,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Servizi <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -130,7 +130,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Novità <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -164,7 +164,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Fai acquisti <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -198,7 +198,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Supporto <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center">
@@ -237,7 +237,7 @@
                         <li class="nav-item dropdown position-static">
                             <a class="nav-link my__dropdown-toggle active me-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 My PlayStation <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu border-0 w-100 p-4" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                                 <li><div class="container-fluid">
                                     <div class="row d-flex justify-content-center">
                                         <div class="col-1 d-flex flex-column align-items-center">
