BONUS Vari (Slider) + Easter Egg

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Giochi <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -60,7 +60,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Hardware <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -94,7 +94,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Servizi <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -128,7 +128,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Novità <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -162,7 +162,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Fai acquisti <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -196,7 +196,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown position-static">
-                        <a class="nav-link my__dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Supporto <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
@@ -235,7 +235,7 @@
                 <div class="d-flex flex-column flex-lg-row align-items-start align-items-xl-center">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown position-static">
-                            <a class="nav-link my__dropdown-toggle active me-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link my__dropdown-toggle active my_hover_blue me-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 My PlayStation <i class="fas fa-chevron-down"></i></a>
                             <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
                                 <li><div class="container-fluid">
@@ -277,23 +277,133 @@
     </nav>
 
     <main>
-        <div id="jumbotron" class="container-fluid d-flex flex-column justify-content-end p-5">
-            <div class="row">
-                <div class="jumbo-logo col-6 col-xl-2 mb-5">
-                    <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
-                </div>
-            </div>
-            <div class="row">
-                <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
-                    <h1 class="em3">Rompi il cerchio</h1>
-                </div>
-                <div class="row">
-                    <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
-                        <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
+
+        <div id="jumbo-slider" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="jumbotron container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3">Rompi il cerchio</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="carousel-item">
+                <div class="jumbotron ratchet container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/Ratchet_and_Clank_Rift_Apart_logo.png" alt="Ratchet and Clank Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3">Unisci il duo migliore di sempre</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-white mb-4 em-p">Salta come un fulmine tra mondi ricchi d'azione quando l'avventura intergalattica farà il suo arrivo sulla console PS5™.</p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Acquista ora</button>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            </div>
+              <div class="carousel-item">
+                <div class="jumbotron fifa container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/fifa-22-logo.png" alt="Fifa 22 Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3 text-dark">Con tecnologia Football™</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-dark mb-4 em-p">FIFA 22 è dotato della nuova e rivoluzionaria tecnologia di gioco HyperMotion che avvicina ogni partita alla realtà.</p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Pre-ordina ora</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="jumbotron g-o-t container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/ghost-of-tsushima-directors-cut-logo-01-15jun21$en.png" alt="GOT director's cut Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3 text-dark">C'è una tempesta in arrivo</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-dark mb-4 em-p">Prova l'epico gioco di samurai vincitore di premi, oltre alla modalità Leggende, alla nuovissima espansione Isola di Iki e molto altro.</p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Pre-ordina ora</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="jumbotron d-stranding container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/death-stranding-directors-cut-black-logo-01-en-05may21.png" alt="Dath Stranding director's cut Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3 text-dark">In arrivo il 24 settembre</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-dark mb-4 em-p">Dal leggendario creatore Hideo Kojima arriva un'esperienza innovativa, ora ampliata e rimasterizzata per PS5.</p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Pre-ordina ora</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="jumbotron boolean-careers container-fluid d-flex flex-column justify-content-end p-5">
+                    <div class="row">
+                        <div class="jumbo-logo col-6 col-xl-2 mb-5">
+                            <img src="img/boolean-logo.png" alt="Boolean Logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="jumbo-title col col-lg-5 mb-3 text-white fw-bold">
+                            <h1 class="em3 text-green">Cambia la tua vita.</h1>
+                        </div>
+                        <div class="row">
+                            <div class="jumbo-text col-12 col-md-6 col-xl-3"><p class="text-dark mb-4 em-p">Paghiamo così tanto in pubblicità che usciamo anche nei banner PlayStation <span class="text-danger"><i class="fas fa-heart"></i></span> </p>
+                                <button type="button" class="btn rounded-pill  btn-danger me-4 mb-3 mb-lg-0">Entra in Boolean</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#jumbo-slider" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#jumbo-slider" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
         <div id="game-slider" class="container-fluid mt-3">
             <div class="row justify-content-around ps-4 pe-4">
@@ -304,16 +414,16 @@
                     <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank Image">
                 </div>
                 <div class="game-card col-6 col-md-4 col-lg-2 p-4">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
+                    <img src="img/fifa-22-copertina.png" alt="Fifa 22 Image">
                 </div>
                 <div class="game-card col-6 col-md-4 col-lg-2 p-4">
-                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank Image">
+                    <img src="img/ghost-of-copertina.png" alt="Ghost of Tsushima Image">
                 </div>
                 <div class="game-card col-6 col-md-4 col-lg-2 p-4">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal Image">
+                    <img src="img/death-copertina.png" alt="Deatch Stranding Image">
                 </div>
                 <div class="game-card col-6 col-md-4 col-lg-2 p-4">
-                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank Image">
+                    <img src="img/boolean-copertina.png" alt="Boolean Image">
                 </div>
             </div>
         </div>
